--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="name">Name</label>
+	<input type="text" minlength="3" maxlength="50" required id="name">
+
+	<label for="Portfolio">Portfolio</label>
+	<input type="URL" required>
+	
+	<label for="favColor">Favorite Color</label>
+	<input type="Color" >
+
+	<label for="likeness">Likeness</label>
+	<input type="Range" min="1" max="100">
     <script type="text/javascript" src="./script.js">
 </script>
 
