--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>eedback Form</h2>
+	<h2>Feedback Form</h2>
 	<label for="name">Name</label>
 	<input type="text" minlength="3" maxlength="50" required id="name">
 
