--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
 	<h2>Feedback Form</h2>
 	<label for="name">Name</label>
 	<input type="text" minlength="3" maxlength="50" required id="name">
@@ -20,6 +21,7 @@
 
 	<label for="likeness">Likeness</label>
 	<input type="Range" min="1" max="100">
+		</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
