--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<input type="text" minlength="3" maxlength="50" required id="name">
 
 	<label for="Portfolio">Portfolio</label>
-	<input type="URL" id="Portfolio" required>
+	<input type="url" id="Portfolio" required>
 	
 	<label for="favColor">Favorite Color</label>
 	<input type="Color" >
