--- a/main.html
+++ b/main.html
@@ -7,25 +7,18 @@
 </head>
 
 <body>
+	<h1>Feedback Form</h1>
+	<form method="post">
+		<label for="name">Name</label>
+		<input id="name" type="text" minlength="3", maxlength="50", required	>
+		<label for="portfolio">Portfolio</label>
+		<input id="portfolio" type="url" required>
+		<label for="favColor">Favorite Color</label>
+		<input id="favColor" type="color">
+		<label for="likeness">Likeness</label>
+		<input id="likeness" type="range" min="1", max="100">
+	</form>
 	<!-- the entire body must be written by student -->
-	<header>
-		<h1>Feedback Form</h1>
-	</header>
-	<main>
-		<section>
-			<form method="post">
-				<label for="name">Name</label>
-				<input type="text" id="name" required minlength="3" maxlength="50">
-				<label for="portfolio">Portfolio</label>
-				<input type="url" id="portfolio" required>
-				<label for="favColor">Favorite Color</label>
-				<input type="color" id="favColor">
-				<label for="likeness">Likeness</label>
-				<input type="range"id="likeness" min="1" max="100">
-				
-			</form>
-		</section>
-	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
